# EiyoDex-Site

./: .env.example  .gitattributes  .gitignore  .prettierrc.toml  Cargo.toml  DEVELOPMENT.md  README.md  TODO.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/astro/docs/: astro.config.mjs  package.json
apps/astro/docs/src/components/: Contents.tsx  Welcome.astro
apps/astro/docs/src/pages/: contents.astro
apps/astro/forum/: astro.config.mjs  package-lock.json  package.json
apps/astro/home/: astro.config.mjs  package.json
apps/astro/home/src/components/: Counter.tsx  SSR.tsx  Welcome.astro
apps/astro/home/src/pages/: datasets.astro  downloads.astro  index.astro  ssr.astro  testimonials.astro
apps/astro/research/: astro.config.mjs  package.json
apps/phantom/: Cargo.toml  README.md
apps/proxy/: Cargo.toml
home/: package.json
proxy/: Cargo.toml
proxy/src/: get_env.rs  load_env.rs  main.rs  proxy.rs
research/: package-lock.json
scripts/: run.dev.sh
styles/astro/: default.scss
xtask/: Cargo.toml
